# SynFact

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_synthesis.py  run_synthesis_l.py  run_synthesis_vl.py  upload_dataset.py
synfact/: __init__.py  config.py  export.py  export_vl.py  image_client.py  llm_client.py  models.py  models_vl.py  pipeline.py  pipeline_vl.py
synfact/generators/: __init__.py  artwork_generator.py  corpus_generator.py  entity_generator.py  qa_generator.py  visual_qa_generator.py  world_generator.py
